feat: Distant Horizons optimization synergy and UI node editor fixes
This commit includes massive server and client side performance optimization features specifically tailored for Distant Horizons synergy, as well as crucial UI interaction fixes for the node graph editor.

Performance & Distant Horizons Synergy:
- Added Chunk Gen Throttle: TPS-reactive view distance reduction under heavy chunk generation load.
- Added Movement Leniency Handler: Relaxes 'moved too quickly' detection dynamically when server TPS drops to prevent false positive kicks when DH is active.
- Integrated DHSyncCoordinator for real-time LOD invalidation.
- Implemented LRU Chunk Cache and Async Occlusion Culling to prevent client-side render thread bottlenecking.
- Added JMX Allocation Tracker and GC Advisor for profiling.
- Added JVM GC Flag Patcher to automatically optimize startup scripts for ZGC.
- Expanded '/sm performance' command and Performance Settings GUI.

UI & Node Graph Fixes:
- Fixed vanilla container isDragging logic swallowing node graph drag events by overriding mouseDragged in EconomyManagementScreen to forcefully forward events to the editor.
- Updated ScalableContainerScreen coordinate scaling to use the public getGuiScale() method to prevent private access violations across loader architectures.
- Fixed text field focus conflicts in RewardNode by explicitly un-focusing the internal itemPicker/searchBox when the Cash Reward text box is clicked, preventing hidden fields from intercepting keypresses.